--- a/services/modules/helm-charts/charts/guardian-api-gateway/templates/configmap.yaml
+++ b/services/modules/helm-charts/charts/guardian-api-gateway/templates/configmap.yaml
@@ -3,5 +3,5 @@ kind: ConfigMap
 metadata:
   name: {{ include "guardian-api-gateway.fullname" . }}-{{ .Release.Revision }}
 data:  
-  MQ_ADDRESS: guardian-message-broker-{{ .Release.Revision }}
+  MQ_ADDRESS: message-broker
   SERVICE_CHANNEL: "api-gateway"
