--- a/services/modules/helm-charts/charts/guardian-guardian-service/templates/configmap.yaml
+++ b/services/modules/helm-charts/charts/guardian-guardian-service/templates/configmap.yaml
@@ -3,11 +3,12 @@ kind: ConfigMap
 metadata:
   name: {{ include "guardian-guardian-service.fullname" . }}-{{ .Release.Revision }}
 data:  
-  MQ_ADDRESS: guardian-message-broker-{{ .Release.Revision }}
+  MQ_ADDRESS: message-broker
   DB_HOST: mongodb
   DB_DATABASE: guardian_db
   SERVICE_CHANNEL: "guardian.1"
   OPERATOR_ID: {{ .Values.global.guardian.operatorId }}
   OPERATOR_KEY: {{ .Values.global.guardian.operatorKey }}
   SCHEMA_TOPIC_ID: {{ .Values.global.guardian.topicId }}
- 
+  MAX_TRANSACTION_FEE: {{ .Values.global.guardian.maxTransactionFee }}
+  INITIAL_BALANCE: {{ .Values.global.guardian.initialBalance }}
