--- a/services/modules/helm-charts/charts/guardian-ipfs-client/templates/configmap.yaml
+++ b/services/modules/helm-charts/charts/guardian-ipfs-client/templates/configmap.yaml
@@ -3,7 +3,7 @@ kind: ConfigMap
 metadata:
   name: {{ include "guardian-ipfs-client.fullname" . }}-{{ .Release.Revision }}
 data:  
-  MQ_ADDRESS: guardian-message-broker-{{ .Release.Revision }}
+  MQ_ADDRESS: message-broker
   DB_HOST: mongodb
   DB_DATABASE: ipfs_client_db
   SERVICE_CHANNEL: "ipfs-client"
