--- a/services/modules/helm-charts/charts/guardian-logger-service/templates/configmap.yaml
+++ b/services/modules/helm-charts/charts/guardian-logger-service/templates/configmap.yaml
@@ -3,7 +3,7 @@ kind: ConfigMap
 metadata:
   name: {{ include "guardian-logger-service.fullname" . }}-{{ .Release.Revision }}
 data:  
-  MQ_ADDRESS: guardian-message-broker-{{ .Release.Revision }}
+  MQ_ADDRESS: message-broker
   DB_HOST: mongodb
   DB_DATABASE: guardian_db
   SERVICE_CHANNEL: "logger-service"
