Finally got AWS working and security groups protecting the Guardian cluster

--- a/services/modules/helm-charts/charts/guardian-web-proxy/templates/service.yaml
+++ b/services/modules/helm-charts/charts/guardian-web-proxy/templates/service.yaml
@@ -4,6 +4,8 @@ metadata:
   name: {{ include "guardian-web-proxy.fullname" . }}-{{ .Release.Revision }}
   labels:
     {{- include "guardian-web-proxy.labels" . | nindent 4 }}
+  annotations:
+    {{- include "guardian-web-proxy.annotations" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
