Both AWS and GCP are working. Refactored the MultiCloud capability due to AWS being a problem with how it needs to attach additional items to ELB

--- a/services/modules/helm-charts/charts/guardian-api-gateway/templates/configmap.yaml
+++ b/services/modules/helm-charts/charts/guardian-api-gateway/templates/configmap.yaml
@@ -4,4 +4,4 @@ metadata:
   name: {{ include "guardian-api-gateway.fullname" . }}-{{ .Release.Revision }}
 data:  
   MQ_ADDRESS: message-broker
-  SERVICE_CHANNEL: "api-gateway"
+  SERVICE_CHANNEL: api-gateway
