--- a/services/modules/helm-charts/charts/guardian-auth-service/templates/deployment.yaml
+++ b/services/modules/helm-charts/charts/guardian-auth-service/templates/deployment.yaml
@@ -5,14 +5,17 @@ metadata:
   labels:
     {{- include "guardian-auth-service.labels" . | nindent 4 }}
 spec:
-  {{- if not .Values.autoscaling.enabled }}
-  replicas: {{ .Values.replicaCount }}
+    {{- if not .Values.autoscaling.enabled }}
+  replicas: {{ .Values.global.guardian.replicas | default .Values.replicaCount }}
   {{- end }}
   selector:
     matchLabels:
       {{- include "guardian-auth-service.selectorLabels" . | nindent 6 }}
-  strategy: 
-    type: Recreate
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 1
   template:
     metadata:
       {{- with .Values.podAnnotations }}
@@ -32,18 +35,57 @@ spec:
         - name: {{ .Chart.Name }}
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
+          image: "{{ .Values.image.repository }}:{{ .Values.global.guardian.version | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          ports:
+            - name: p3004
+              containerPort: 3004
+              protocol: TCP
+          command: ["/bin/sh"]
+          args: ["entrypoint.sh"]
           livenessProbe:
-            exec:
-              command:
-              - echo
-              - $HOME
+            {{- toYaml .Values.global.livenessProbe | nindent 12 }}
+          readinessProbe:
+            {{- toYaml .Values.global.readinessProbe | nindent 12 }}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
           envFrom:
             - configMapRef:
-                name: {{ include "guardian-auth-service.fullname" . }}-{{ .Release.Revision }}                
+                name: {{ include "guardian-auth-service.fullname" . }}-{{ .Release.Revision }}
+            - secretRef:
+                name: {{ include "guardian-auth-service.fullname" . }}-{{ .Release.Revision }}
+            - configMapRef:
+                name: {{ .Release.Name }}-tymlez-extensions-newrelic
+          volumeMounts:
+            - name: files
+              readOnly: true
+              mountPath: /usr/auth-service/tymlez-healthcheck.js
+              subPath: tymlez-healthcheck.js
+            - name: files
+              readOnly: true
+              mountPath: /usr/auth-service/entrypoint.sh
+              subPath: entrypoint.sh
+            - name: files
+              readOnly: true
+              mountPath: /usr/auth-service/node_modules/@guardian/common/dist/mq/message-broker-channel.js
+              subPath: mq.js
+            - name: files
+              readOnly: true
+              mountPath: /usr/auth-service/dist/tymlez.js
+              subPath: tymlez.js
+      volumes:
+        - name: files
+          configMap:
+            name: {{ .Release.Name}}-tymlez-extensions-files
+            items:
+              - key: tymlez-healthcheck.js
+                path: tymlez-healthcheck.js
+              - key: entrypoint.sh
+                path: entrypoint.sh
+              - key: mq.js
+                path: mq.js
+              - key: tymlez.js
+                path: tymlez.js
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
