--- a/services/modules/helm-charts/charts/guardian-extensions/templates/secret.yaml
+++ b/services/modules/helm-charts/charts/guardian-extensions/templates/secret.yaml
@@ -3,5 +3,5 @@ data:
   auth: dHltbGV6OiRhcHIxJHBVb0JROG5qJFFiWkllZ3dpdzZVM3ZHRm1nZmwxQjEK
 kind: Secret
 metadata:
-  name: {{.Release.Name}}-tymlez-basic-auth
+  name: {{.Release.Name}}-basic-auth
 type: Opaque
