--- a/services/modules/helm-charts/charts/guardian-logger-service/templates/configmap.yaml
+++ b/services/modules/helm-charts/charts/guardian-logger-service/templates/configmap.yaml
@@ -7,4 +7,5 @@ data:
   DB_HOST: mongodb
   DB_DATABASE: guardian_db
   SERVICE_CHANNEL: "logger-service"
- 
+  ENABLE_APM_NAME: "{{ .Values.global.guardian.enable_apm_name }}"
+  NEW_RELIC_APP_NAME: "{{ include "guardian-logger-service.fullname" . }}"
