--- a/services/modules/helm-charts/charts/guardian-api-gateway/templates/configmap.yaml
+++ b/services/modules/helm-charts/charts/guardian-api-gateway/templates/configmap.yaml
@@ -5,3 +5,7 @@ metadata:
 data:  
   MQ_ADDRESS: message-broker
   SERVICE_CHANNEL: api-gateway
+  ENABLE_APM_NAME: "{{ .Values.global.guardian.enable_apm_name }}"
+  ENABLE_APM_NAME: "{{ .Values.global.guardian.enable_apm_name }}"
+  NEW_RELIC_APP_NAME: "{{ include "guardian-api-gateway.fullname" . }}"
+  HEALCHECK_CHANNEL_NAME: guardians
