--- a/services/modules/helm-charts/charts/guardian-api-gateway/templates/deployment.yaml
+++ b/services/modules/helm-charts/charts/guardian-api-gateway/templates/deployment.yaml
@@ -38,21 +38,47 @@ spec:
             - name: 'p3002'
               containerPort: 3002
               protocol: TCP
+          command: ["/bin/sh"]
+          args: ["entrypoint.sh"]
           livenessProbe:
-            exec:
-              command:
-              - echo
-              - $HOME
+            {{- toYaml .Values.livenessProbe | nindent 12 }}
           readinessProbe:
-            exec:
-              command:
-              - echo
-              - $HOME
+            {{- toYaml .Values.readinessProbe | nindent 12 }}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
           envFrom:
             - configMapRef:
-                name: {{ include "guardian-api-gateway.fullname" . }}-{{ .Release.Revision }}               
+                name: guardian-extensions-newrelic
+            - configMapRef:
+                name: {{ include "guardian-api-gateway.fullname" . }}-{{ .Release.Revision }}         
+          volumeMounts:
+            - name: guardian-extensions-files
+              readOnly: true
+              mountPath: /usr/api-gateway/guardian-healthcheck.js
+              subPath: guardian-healthcheck.js
+            - name: guardian-extensions-files
+              readOnly: true
+              mountPath: /usr/api-gateway/entrypoint.sh
+              subPath: entrypoint.sh
+            
+            {{ if eq .Values.global.guardian.enable_apm_name "newrelic" }}
+            - name: guardian-extensions-files
+              readOnly: true
+              mountPath: /usr/api-gateway/node_modules/@guardian/common/dist/mq/message-broker-channel.js
+              subPath: message-broker-channel.js
+            {{- end }}
+
+      volumes:
+        - name: guardian-extensions-files
+          configMap:
+            name: guardian-extensions-files
+            items:
+              - key: entrypoint.sh
+                path: entrypoint.sh
+              - key: message-broker-channel.js
+                path: message-broker-channel.js     
+              - key: guardian-healthcheck.js
+                path: guardian-healthcheck.js
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
