--- a/services/modules/helm-charts/charts/guardian-api-gateway/templates/service.yaml
+++ b/services/modules/helm-charts/charts/guardian-api-gateway/templates/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "guardian-api-gateway.fullname" . }}-{{ .Release.Revision }}
+  name: {{ include "guardian-api-gateway.fullname" . }}
   labels:
     {{- include "guardian-api-gateway.labels" . | nindent 4 }}
 spec:
