--- a/services/modules/helm-charts/charts/guardian-extensions/Chart.yaml
+++ b/services/modules/helm-charts/charts/guardian-extensions/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: tymlez-extensions
+name: guardian-extensions
 description: A Helm chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
@@ -22,3 +22,8 @@ version: 0.1.0
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
 appVersion: "2.1.3"
+
+dependencies:
+  - name: ingress-nginx
+    version: '4.1.4'
+    repository: 'https://kubernetes.github.io/ingress-nginx'
