--- a/services/modules/helm-charts/charts/guardian-extensions/templates/configmap-files.yaml
+++ b/services/modules/helm-charts/charts/guardian-extensions/templates/configmap-files.yaml
@@ -1,12 +1,6 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "tymlez-extensions.fullname" . }}-files
+  name: {{ include "guardian-extensions.name" . }}-files
 data:
 {{ (.Files.Glob "files/*").AsConfig | indent 2 }}
-  {{- if .global.SystemSchema }}
-  system_schema.json: |
-    {{ .global.SystemSchema | indent 2 }}
-  {{- end }}
-
-    After apply check for this existing in the config map
