--- a/services/modules/helm-charts/charts/guardian-ipfs-client/templates/configmap.yaml
+++ b/services/modules/helm-charts/charts/guardian-ipfs-client/templates/configmap.yaml
@@ -7,4 +7,5 @@ data:
   DB_HOST: mongodb
   DB_DATABASE: ipfs_client_db
   SERVICE_CHANNEL: "ipfs-client"
-  NFT_API_KEY: {{ .Values.global.guardian.ipfsKey }}
+  ENABLE_APM_NAME: "{{ .Values.global.guardian.enable_apm_name }}"
+  NEW_RELIC_APP_NAME: "{{ include "guardian-ipfs-client.fullname" . }}"
