--- a/services/modules/helm-charts/charts/guardian-ipfs-client/values.yaml
+++ b/services/modules/helm-charts/charts/guardian-ipfs-client/values.yaml
@@ -1,6 +1,13 @@
 # Default values for guardian-ipfs-client.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
+service:
+  type: ClusterIP
+  ports:
+    - port: 3006
+      targetPort: p3006
+      protocol: TCP
+      name: p3006
 
 replicaCount: 1
 
@@ -48,3 +55,21 @@ nodeSelector: {}
 tolerations: []
 
 affinity: {}
+
+livenessProbe:
+  initialDelaySeconds: 30
+  failureThreshold: 10
+  timeoutSeconds: 5
+  exec:
+    command: 
+      - /bin/bash
+      - -c
+      - ps aux | grep index.js
+readinessProbe:
+  initialDelaySeconds: 30
+  failureThreshold: 10
+  timeoutSeconds: 5
+  exec:
+    command: 
+      -  node 
+      -  guardian-healthcheck.js
