--- a/services/modules/helm-charts/charts/guardian-api-gateway/templates/deployment.yaml
+++ b/services/modules/helm-charts/charts/guardian-api-gateway/templates/deployment.yaml
@@ -44,8 +44,14 @@ spec:
             {{- toYaml .Values.livenessProbe | nindent 12 }}
           readinessProbe:
             {{- toYaml .Values.readinessProbe | nindent 12 }}
-          resources:
-            {{- toYaml .Values.resources | nindent 12 }}
+          resources: 
+            limits:
+              cpu: "{{ .Values.resources.cpu}}"
+              memory: "{{ .Values.resources.memory}}"
+            requests:
+              cpu: "{{ .Values.resources.cpu}}"
+              memory: "{{ .Values.resources.memory}}"
+
           envFrom:
             - configMapRef:
                 name: guardian-extensions-newrelic
