--- a/services/modules/helm-charts/charts/guardian-frontend/Chart.yaml
+++ b/services/modules/helm-charts/charts/guardian-frontend/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: guardian-web-proxy
+name: guardian-frontend
 description: A Helm chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
