--- a/services/modules/helm-charts/charts/guardian-frontend/templates/configmap.yaml
+++ b/services/modules/helm-charts/charts/guardian-frontend/templates/configmap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "guardian-web-proxy.fullname" . }}-{{ .Release.Revision }}
+  name: {{ include "guardian-frontend.fullname" . }}-{{ .Release.Revision }}
 data:  
   default.conf: |
     server {
