feat: update charts so support ingress/apm/healthcheck

--- a/services/modules/helm-charts/charts/guardian-api-gateway/values.yaml
+++ b/services/modules/helm-charts/charts/guardian-api-gateway/values.yaml
@@ -42,16 +42,9 @@ service:
     - port: 3002
       targetPort: 'p3002'
  
-ingress:
-  enabled: false
-
 resources: 
-  limits:
-    cpu: 1000m
-    memory: 1Gi
-  requests:
-    cpu: 500m
-    memory: 256Mi
+  cpu: 500m
+  memory: 256Mi
 
 autoscaling:
   enabled: false
@@ -65,3 +58,19 @@ nodeSelector: {}
 tolerations: []
 
 affinity: {}
+
+livenessProbe:
+  initialDelaySeconds: 30
+  failureThreshold: 10
+  timeoutSeconds: 5
+  httpGet:
+    path: /demo/registeredUsers
+    port: p3002
+readinessProbe:
+  initialDelaySeconds: 30
+  failureThreshold: 10
+  timeoutSeconds: 5
+  exec:
+    command: 
+      -  node 
+      -  guardian-healthcheck.js
