--- a/services/modules/helm-charts/charts/guardian-extensions/values.yaml
+++ b/services/modules/helm-charts/charts/guardian-extensions/values.yaml
@@ -1,4 +1,10 @@
-# Default values for guardian-web-proxy.
+# Default values for guardian-frontend.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
+ingress:
+  enabled: true
+  whitelistedIps: "180.150.54.180/32,49.255.23.135/32,194.223.39.226/32,120.21.49.106/32"
+proxy:
+  guardian_api_gateway: guardian-api-gateway
+  guardian_frontend: guardian-frontend
