--- a/services/modules/helm-charts/charts/guardian-extensions/Chart.yaml
+++ b/services/modules/helm-charts/charts/guardian-extensions/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: tymlez-extensions
+name: guardian-extensions
 description: A Helm chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
