--- a/services/modules/helm-charts/charts/guardian-extensions/templates/ingress.yaml
+++ b/services/modules/helm-charts/charts/guardian-extensions/templates/ingress.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.ingress.enabled }}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
@@ -9,27 +10,27 @@ metadata:
         nginx.ingress.kubernetes.io/proxy-connect-timeout: "180"
         nginx.ingress.kubernetes.io/proxy-read-timeout: "180"
         nginx.ingress.kubernetes.io/proxy-send-timeout: "180"
-        nginx.ingress.kubernetes.io/proxy-body-size: 20m
-        # nginx.ingress.kubernetes.io/auth-type: basic
-        # nginx.ingress.kubernetes.io/auth-secret: {{.Release.Name}}-tymlez-basic-auth
-        # nginx.ingress.kubernetes.io/whitelist-source-range: "{{.Values.global.guardian.whitelistedIps}}"
+        nginx.ingress.kubernetes.io/proxy-body-size: 64m
+        nginx.ingress.kubernetes.io/enable-owasp-core-rules: "true"
+        nginx.ingress.kubernetes.io/whitelist-source-range: {{ .Values.ingress.whitelistedIps }}
+        # nginx.ingress.kubernetes.io/ssl-passthrough: "false"
 spec:
     ingressClassName: 'nginx'
     rules:
-      #- host: "{{ .Values.global.host}}"
       - http:
           paths:
             - path: /api/v1(/|$)(.*)
               pathType: Prefix
               backend:
                 service:
-                  name: {{ .Release.Name }}-guardian-api-gateway-{{ .Release.Revision }}
+                  name: {{ .Values.proxy.guardian_api_gateway }}
                   port:
                     number: 3002
             - path: /?(/|$)(.*)
               pathType: Prefix
               backend:
                 service:
-                  name: {{ .Release.Name }}-guardian-web-proxy
+                  name: {{ .Values.proxy.guardian_frontend}}
                   port:
                     number: 80
+{{- end}}
