--- a/services/modules/helm-charts/charts/guardian-frontend/templates/configmap.yaml
+++ b/services/modules/helm-charts/charts/guardian-frontend/templates/configmap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "guardian-web-proxy.fullname" . }}-{{ .Release.Revision }}
+  name: {{ include "guardian-frontend.fullname" . }}-{{ .Release.Revision }}
 data:  
   default.conf: |
     server {
@@ -12,7 +12,7 @@ data:
         #access_log  /var/log/nginx/host.access.log  main;
 
         location /ws/ {
-            proxy_pass http://guardian-api-gateway-{{ .Release.Revision }}:3002;
+            proxy_pass http://guardian-api-gateway:3002;
             proxy_set_header Host $host;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
@@ -21,7 +21,7 @@ data:
         }
 
         location /api/v1/ {
-            proxy_pass http://guardian-api-gateway-{{ .Release.Revision }}:3002/;
+            proxy_pass http://guardian-api-gateway:3002/;
             proxy_set_header Host $host;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Real-IP $remote_addr;
