--- a/services/modules/helm-charts/charts/guardian-frontend/values.yaml
+++ b/services/modules/helm-charts/charts/guardian-frontend/values.yaml
@@ -1,4 +1,4 @@
-# Default values for guardian-web-proxy.
+# Default values for guardian-frontend.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
@@ -37,12 +37,19 @@ securityContext: {}
   # runAsUser: 1000
 
 service:
-  type: LoadBalancer
+  type: ClusterIP
   ports:
     - port: 80
       targetPort: 80
       protocol: TCP
 
+# service:
+#   type: ClusterIP
+#   ports:
+#     - port: 3004
+#       targetPort: p3004
+#       protocol: TCP
+#       name: p3004
 
 
 ingress:
@@ -61,17 +68,9 @@ ingress:
   #    hosts:
   #      - chart-example.local
 
-resources: {}
-  # We usually recommend not to specify default resources and to leave this as a conscious
-  # choice for the user. This also increases chances charts run on environments with little
-  # resources, such as Minikube. If you do want to specify resources, uncomment the following
-  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  # limits:
-  #   cpu: 100m
-  #   memory: 128Mi
-  # requests:
-  #   cpu: 100m
-  #   memory: 128Mi
+resources: 
+  cpu: 100m
+  memory: 128Mi
 
 autoscaling:
   enabled: false
