--- a/services/modules/helm-charts/charts/guardian-guardian-service/values.yaml
+++ b/services/modules/helm-charts/charts/guardian-guardian-service/values.yaml
@@ -1,6 +1,13 @@
 # Default values for guardian-guardian-service.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
+service:
+  type: ClusterIP
+  ports:
+    - port: 3005
+      targetPort: p3005
+      protocol: TCP
+      name: p3005
 
 replicaCount: 1
 
@@ -37,22 +44,36 @@ securityContext: {}
 
 
 resources:
-  limits:
-    cpu: 1000m
-    memory: 1Gi
-  requests:
-    cpu: 500m
-    memory: 256Mi
+  cpu: 1000m
+  memory: 1Gi
 
 autoscaling:
-  enabled: false
+  enabled: true
   minReplicas: 1
-  maxReplicas: 5
-  targetCPUUtilizationPercentage: 80
-  # targetMemoryUtilizationPercentage: 80
+  maxReplicas: 10
+  targetCPUUtilizationPercentage: 70
+  targetMemoryUtilizationPercentage: 70
 
 nodeSelector: {}
 
 tolerations: []
 
 affinity: {}
+
+livenessProbe:
+  initialDelaySeconds: 30
+  failureThreshold: 10
+  timeoutSeconds: 5
+  exec:
+    command: 
+      - /bin/bash
+      - -c
+      - ps aux | grep index.js
+readinessProbe:
+  initialDelaySeconds: 30
+  failureThreshold: 10
+  timeoutSeconds: 5
+  exec:
+    command: 
+      -  node 
+      -  guardian-healthcheck.js
