--- a/services/modules/helm-charts/charts/guardian-guardian-service/templates/deployment.yaml
+++ b/services/modules/helm-charts/charts/guardian-guardian-service/templates/deployment.yaml
@@ -50,8 +50,10 @@ spec:
                 name: {{ include "guardian-guardian-service.fullname" . }}-{{ .Release.Revision }}
             - secretRef:
                 name: {{ include "guardian-guardian-service.fullname" . }}-{{ .Release.Revision }}
+            {{- if eq .Values.global.guardian.enable_apm_name "newrelic" }}
             - configMapRef:
                 name: guardian-extensions-newrelic
+            {{- end}}
           volumeMounts:
             - name: guardian-extensions-files
               readOnly: true
@@ -62,7 +64,7 @@ spec:
               mountPath: /usr/guardian-service/entrypoint.sh
               subPath: entrypoint.sh
             
-            {{ if eq .Values.global.guardian.enable_apm_name "newrelic" }}
+            {{- if eq .Values.global.guardian.enable_apm_name "newrelic" }}
             - name: guardian-extensions-files
               readOnly: true
               mountPath: /usr/guardian-service/node_modules/@guardian/common/dist/mq/message-broker-channel.js
