--- a/services/modules/helm-charts/charts/guardian-ipfs-client/templates/deployment.yaml
+++ b/services/modules/helm-charts/charts/guardian-ipfs-client/templates/deployment.yaml
@@ -52,8 +52,10 @@ spec:
                 name: {{ include "guardian-ipfs-client.fullname" . }}-{{ .Release.Revision }}
             - secretRef:
                 name: {{ include "guardian-ipfs-client.fullname" . }}-{{ .Release.Revision }}
+            {{- if eq .Values.global.guardian.enable_apm_name "newrelic" }}
             - configMapRef:
-                name: guardian-extensions-newrelic 
+                name: guardian-extensions-newrelic
+            {{- end}}
           volumeMounts:
             - name: guardian-extensions-files
               readOnly: true
@@ -64,7 +66,7 @@ spec:
               mountPath: /usr/ipfs-client/entrypoint.sh
               subPath: entrypoint.sh
             
-            {{ if eq .Values.global.guardian.enable_apm_name "newrelic" }}
+            {{- if eq .Values.global.guardian.enable_apm_name "newrelic" }}
             - name: guardian-extensions-files
               readOnly: true
               mountPath: /usr/ipfs-client/node_modules/@guardian/common/dist/mq/message-broker-channel.js
