--- a/services/modules/helm-charts/charts/guardian-logger-service/templates/deployment.yaml
+++ b/services/modules/helm-charts/charts/guardian-logger-service/templates/deployment.yaml
@@ -51,8 +51,10 @@ spec:
           envFrom:
             - configMapRef:
                 name: {{ include "guardian-logger-service.fullname" . }}-{{ .Release.Revision }}
+            {{- if eq .Values.global.guardian.enable_apm_name "newrelic" }}
             - configMapRef:
                 name: guardian-extensions-newrelic
+            {{- end}}
           volumeMounts:
             - name: guardian-extensions-files
               readOnly: true
@@ -62,10 +64,12 @@ spec:
               readOnly: true
               mountPath: /usr/logger-service/entrypoint.sh
               subPath: entrypoint.sh
+            {{- if eq .Values.global.guardian.enable_apm_name "newrelic" }}
             - name: guardian-extensions-files
               readOnly: true
               mountPath:  /usr/logger-service/node_modules/@guardian/common/dist/mq/message-broker-channel.js
               subPath: message-broker-channel.js
+            {{- end}}
       volumes:
         - name: guardian-extensions-files
           configMap:
