Refactored AWS after latest changes, especially around PVC's and affinity Updated some variables to make it more cross cloud functional without massive custom configuration

--- a/services/modules/helm-charts/charts/mongodb/aws-pvc.yaml
+++ b/services/modules/helm-charts/charts/mongodb/aws-pvc.yaml
@@ -8,8 +8,11 @@ parameters:
 provisioner: kubernetes.io/aws-ebs
 reclaimPolicy: Delete
 volumeBindingMode: WaitForFirstConsumer
-allowedTopologies:
-- matchLabelExpressions:
-  - key: failure-domain.beta.kubernetes.io/zone
-    values:
-    - ap-southeast-2a
+#allowedTopologies:
+#- matchLabelExpressions:
+#  - key: failure-domain.beta.kubernetes.io/zone
+#    values:
+#    - ap-southeast-2a
+#  - key: topology.kubernetes.io/zone
+#    values:
+#    - ap-southeast-2a
