Refactored AWS after latest changes, especially around PVC's and affinity Updated some variables to make it more cross cloud functional without massive custom configuration

--- a/services/modules/helm-charts/charts/guardian-ipfs-client/templates/secrets.yaml
+++ b/services/modules/helm-charts/charts/guardian-ipfs-client/templates/secrets.yaml
@@ -4,4 +4,4 @@ metadata:
   name: {{ include "guardian-ipfs-client.fullname" . }}-{{ .Release.Revision }}
 type: Opaque
 data:
-  NFT_API_KEY: {{ .Values.global.guardian.ipfsKey | b64enc | quote }}
+  IPFS_STORAGE_API_KEY: {{ .Values.global.guardian.ipfsKey | b64enc | quote }}
