--- a/services/modules/helm-charts/charts/guardian-api-gateway/templates/configmap.yaml
+++ b/services/modules/helm-charts/charts/guardian-api-gateway/templates/configmap.yaml
@@ -6,6 +6,6 @@ data:
   MQ_ADDRESS: message-broker
   SERVICE_CHANNEL: api-gateway
   ENABLE_APM_NAME: "{{ .Values.global.guardian.enable_apm_name }}"
-  ENABLE_APM_NAME: "{{ .Values.global.guardian.enable_apm_name }}"
   NEW_RELIC_APP_NAME: "{{ include "guardian-api-gateway.fullname" . }}"
-  HEALCHECK_CHANNEL_NAME: guardians
+  HEALTHCHECK_CHANNEL_NAME: guardians
+  MRV_ADDRESS: message-broker/mrv
