--- a/services/modules/helm-charts/charts/guardian-worker-service/templates/configmap.yaml
+++ b/services/modules/helm-charts/charts/guardian-worker-service/templates/configmap.yaml
@@ -5,9 +5,9 @@ metadata:
 data:  
   MQ_ADDRESS: message-broker
   SERVICE_CHANNEL: "worker"
-  MIN_PRIORITY: 0
-  MAX_PRIORITY: 19
-  TASK_TIMEOUT: 300
-  REFRESH_INTERVAL: 300
+  MIN_PRIORITY: "0"
+  MAX_PRIORITY: "19"
+  TASK_TIMEOUT: "300"
+  REFRESH_INTERVAL: "300"
   ENABLE_APM_NAME: "{{ .Values.global.guardian.enable_apm_name }}"
   NEW_RELIC_APP_NAME: "{{ include "guardian-worker-service.fullname" . }}"
