--- a/services/modules/helm-charts/charts/guardian-worker-service/templates/deployment.yaml
+++ b/services/modules/helm-charts/charts/guardian-worker-service/templates/deployment.yaml
@@ -38,8 +38,8 @@ spec:
           args: ["entrypoint.sh"]
           livenessProbe:
             {{- toYaml .Values.livenessProbe | nindent 12 }}
-          readinessProbe:
-            {{- toYaml .Values.readinessProbe | nindent 12 }}
+{{/*          readinessProbe:*/}}
+{{/*            {{- toYaml .Values.readinessProbe | nindent 12 }}*/}}
           resources: 
             limits:
               cpu: "{{ .Values.resources.cpu}}"
