fix: 2.4.2 fixed issue with healthcheck queue & misc

--- a/services/modules/helm-charts/charts/mongodb/values.yaml
+++ b/services/modules/helm-charts/charts/mongodb/values.yaml
@@ -1,7 +1,8 @@
 image:
   tag: 5.0.9-debian-10-r19
 persistence:
-  size: 50Gi
+  size: 100Gi
+  # existingClaim: 'guardian'
 useStatefulSet: true
 auth:
   enabled: false
