--- a/services/modules/helm-charts/charts/mongodb/gcp-pvc.yaml
+++ b/services/modules/helm-charts/charts/mongodb/gcp-pvc.yaml
@@ -4,3 +4,31 @@ metadata:
   name: mongo-snapshot-class
 driver: pd.csi.storage.gke.io
 deletionPolicy: Delete
+
+# ---
+# apiVersion: v1
+# kind: PersistentVolume
+# metadata:
+#   name: pv-existing-disk
+# spec:
+#   storageClassName: ""
+#   capacity:
+#     storage: 150Gi
+#   accessModes:
+#     - ReadWriteOnce
+#   gcePersistentDisk:
+#     pdName: mongo-db-pvc
+#     fsType: ext4
+# ---
+# apiVersion: v1
+# kind: PersistentVolumeClaim
+# metadata:
+#   name: pvc-existiting-disk
+# spec:
+#   storageClassName: ""
+#   volumeName: pv-existing-disk
+#   accessModes:
+#     - ReadWriteOnce
+#   resources:
+#     requests:
+#       storage: 150Gi
