--- a/services/modules/helm-charts/charts/guardian-auth-service/templates/secret.yaml
+++ b/services/modules/helm-charts/charts/guardian-auth-service/templates/secret.yaml
@@ -5,3 +5,4 @@ metadata:
 type: Opaque
 data:
   ACCESS_TOKEN_SECRET: {{ .Values.global.guardian.accessTokenSecret | b64enc | quote}}
+  HASHICORP_TOKEN: {{ .Values.global.vault.vault_token | b64enc | quote}}
