--- a/services/modules/helm-charts/charts/guardian-guardian-service/templates/configmap.yaml
+++ b/services/modules/helm-charts/charts/guardian-guardian-service/templates/configmap.yaml
@@ -16,3 +16,4 @@ data:
   LOG_LEVEL: "{{ .Values.global.guardian.logLevel}}"
   ENABLE_APM_NAME: "{{ .Values.global.guardian.enable_apm_name }}"
   NEW_RELIC_APP_NAME: "{{ include "guardian-guardian-service.fullname" . }}"
+  NODE_OPTIONS: "--max-old-space-size=8192"
