--- a/services/modules/helm-charts/charts/guardian-ipfs-client/values.yaml
+++ b/services/modules/helm-charts/charts/guardian-ipfs-client/values.yaml
@@ -44,7 +44,7 @@ autoscaling:
   minReplicas: 1
   maxReplicas: 5
   targetCPUUtilizationPercentage: 80
-  # targetMemoryUtilizationPercentage: 80
+  targetMemoryUtilizationPercentage: 80
 
 nodeSelector: {}
 
