--- a/services/modules/helm-charts/charts/guardian-auth-service/templates/configmap.yaml
+++ b/services/modules/helm-charts/charts/guardian-auth-service/templates/configmap.yaml
@@ -13,3 +13,4 @@ data:
   HASHICORP_ADDRESS: "{{ .Values.global.vault.vault_url}}"
   HASHICORP_WORKSPACE: "{{ .Values.global.vault.vault_workspace}}"
   IMPORT_KEYS_FROM_DB: "1"
+  HASHICORP_ENCRIPTION_ALG: "sha256"
